snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha1
b0290959dc34de4a3505e4208946fd7b9ff84f02